--- a/padre-ginos/package.json
+++ b/padre-ginos/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css}\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
